# FultronOS

./: .bazelrc  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  WORKSPACE  aarch64-fultronos.json  arm-none-eabi.cmake  build.rs  cortex-a9.sh  debug.sh  emulate.sh  i686.sh  link.ld  memmap.ld  renode-config.resc  riscv64.sh  run.sh  rustfmt.toml  tasks.py  test.sh
.cargo/: config.toml
.github/: main.yaml
arch/aarch64/: Cargo.toml
arch/aarch64/src/: vector.rs
bazel/toolchain/: BUILD
cmake/: arm-none-eabi-gcc.cmake  i686-elf-gcc.cmake  riscv64-unknown-elf-gcc.cmake
common/: Cargo.toml
common/src/: lib.rs  logger.rs
devices/src/: lib.rs
drivers/src/: uart.rs
include/: BUILD  bspconfig.h  stdio.h  uart.h  xparameters.h
kernel/: _start.s  link.ld  printf.c  putc.c  start.c  syscalls.c
kernel/asm/: _start.s
kernel/include/: gpio.h  memory_map.h  uart.h
kernel/src/: gpio.c  start.c  syscalls.c
kernel/startup/: _start.s
lib/: Makefile
lib/libc/: Makefile
lib/libc/stdio/inc/: stdio.h  stdout.h
lib/libc/stdio/src/: printf.c  putc.c
source/: BUILD  start.c  test.c
source/arch/i686/: kernel.c
source/arch/riscv64/: makefile
source/arch/zynq-7000/: BUILD  _start.s  link.ld  memmap.ld  start.c
source/drivers/device/: device.c  device.h
source/drivers/ethernet/: BUILD  xemacps.c  xemacps.h  xemacps_bd.h  xemacps_bdring.c  xemacps_bdring.h  xemacps_control.c  xemacps_g.c  xemacps_hw.c  xemacps_hw.h  xemacps_intr.c  xemacps_sinit.c  xil_types.h
source/drivers/sdram/: BUILD  sdram.c  sdram.h
source/drivers/serial/: serial.c  serial.h
source/drivers/uart/: BUILD  uart-zynq.c  uart-zynq.h
source/drivers/uartps/: BUILD  uartps.c  uartps.h
source/inc/: stdio.h  uart.h
source/kernel/: BUILD  link.ld  printf.c  putc.c  start.c  syscalls.c  sysmem.c
source/lib/: _putchar.c  printf.c
source/lib/libfc/: BUILD
source/lib/libfc/include/: printf.h
source/lib/libfc/source/: _putchar.c  printf.c  putc.c
source/system/fatfs/: BUILD
source/system/fatfs/include/: ffconf.h  sdram_diskio.h
source/system/fatfs/source/: diskio.c  sdram_diskio.c
source/system/fultronfs/: BUILD
source/system/fultronfs/include/: disk.h  fultronfs.h  fultronfs_config.h  super_block.h
source/system/fultronfs/source/: disk.c  fultronfs.c
source/system/littlefs/: BUILD
source/system/littlefs/include/: lfs.h  lfs_config.h  lfs_util.h
source/system/littlefs/source/: lfs.c  lfs_util.c
src/: allocator.rs  lib.rs  main.rs  panic_handler.rs  vector.rs
src/arch/aarch64/: Cargo.toml  build.rs  start.s  vector.rs  vector.s
src/arch/aarch64/src/: lib.rs  start.s  vector.rs  vector.s
src/devices/: Cargo.toml  chardev.rs
src/devices/src/: chardev.rs
src/drivers/src/: lib.rs  pl031.rs
src/lib/: Cargo.toml
src/lib/src/: lib.rs  logger.rs
src/process/: Cargo.toml
src/process/src/: lib.rs  timer.rs
tests/: test-basic.robot  tests.yaml
toolchain/: BUILD
tools/renode/: gdbserver.resc  network.resc  renode-config.resc
tools/tuntaposx/: install.sh  net.tunnelblick.tap.plist  net.tunnelblick.tun.plist
