[package]
name = "fultronos"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/arch/aarch64",
    "src/devices",
    "src/drivers",
    "src/lib",
    "src/process",
]

[dependencies]
aarch64 = { path = "src/arch/aarch64" }
aarch64-cpu = "9.4.0"
aarch64-std = "0.1.2"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.3"
devices = { path = "src/devices" }
drivers = { path = "src/drivers" }
lib = { path = "src/lib" }
panic-halt = "0.2.0"
process = {path = "src/process"}
smccc = "0.1.1"
spin = "0.9.8"
tock-registers = "0.8.x"

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true  # Ensure debug symbols are included in release builds
