[package]
name = "aarch64"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# [lib]
# name = "lib_aarch64"
# edition = "2021"
# path = "src/lib.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
aarch64-cpu = "9.4.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
tock-registers = "0.8.x"
